--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
-      <div class="container-fluid d-flex justify-content-center">
-        <a class="navbar-brand right-line pe-5" href="#">
+      <div class="container d-flex justify-content-center">
+        <a class="navbar-brand right-line pe-3" href="#">
           <img
             src="./assets/images/cinemaximum_logo.svg"
             alt=""
-            width="150"
+            width="135"
             height="50"
           />
         </a>
@@ -38,7 +38,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mb-2 mb-lg-0 right-line px-4 m-0 ps-0">
+          <ul
+            class="navbar-nav mb-2 mb-lg-0 right-line w-75 justify-content-between"
+          >
             <li class="nav-item dropdown right-line">
               <a
                 class="nav-link dropdown-toggle no-arrow"
@@ -86,17 +88,21 @@
               ></a>
             </li>
           </ul>
-          <div class="d-flex w-100 justify-content-center">
-            <button class="auth-btn btn-sign-up" type="submit">Üye Ol</button>
-            <button class="auth-btn btn-sign-in" type="submit">Giriş</button>
-            <a href="#">
+          <div class="d-flex ms-auto">
+            <button class="auth-btn btn-sign-up ms-3" type="submit">
+              Üye Ol
+            </button>
+            <button class="auth-btn btn-sign-in ms-3" type="submit">
+              Giriş
+            </button>
+            <a href="#" class="ms-3">
               <img src="./assets/images/cgv_icon.svg" />
             </a>
           </div>
         </div>
       </div>
     </nav>
-    <main class="container-fluid px-5">
+    <main class="container">
       <section class="tabs">
         <h3 class="tab-title active-tab" onclick="activateTab(this)">
           Vizyonda
