--- a/buy-ticket.html
+++ b/buy-ticket.html
@@ -17,92 +17,6 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
-      <div class="container d-flex justify-content-center">
-        <a class="navbar-brand right-line pe-3" href="#">
-          <img
-            src="./assets/images/cinemaximum_logo.svg"
-            alt=""
-            width="135"
-            height="50"
-          />
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul
-            class="navbar-nav mb-2 mb-lg-0 right-line w-75 justify-content-between"
-          >
-            <li class="nav-item dropdown right-line">
-              <a
-                class="nav-link dropdown-toggle no-arrow"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-                ><i class="fa-solid fa-bars"></i>
-                Menü
-              </a>
-              <ul
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Filmler</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sinemalar</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <img
-                  src="./assets/images/gold_class_salon_sizin-black-logo.png"
-                  height="50"
-                />
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"
-                ><img src="./assets/images/header_cgvmoviepass.png" height="50"
-              /></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"
-                ><i class="fa-solid fa-magnifying-glass"></i
-              ></a>
-            </li>
-          </ul>
-          <div class="d-flex ms-auto">
-            <button class="auth-btn btn-sign-up ms-3" type="submit">
-              Üye Ol
-            </button>
-            <button class="auth-btn btn-sign-in ms-3" type="submit">
-              Giriş
-            </button>
-            <a href="#" class="ms-3">
-              <img src="./assets/images/cgv_icon.svg" />
-            </a>
-          </div>
-        </div>
-      </div>
-    </nav>
     <main class="container-fluid">
       <div class="row">
         <div class="col-12 col-sm-6 col-md-4 bg-danger min-vh-100 p-0">
@@ -111,87 +25,16 @@
             <img class="buy-ticket-img" src="./assets/images/malazgirt-1071.png" />
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-8 bg-dark min-vh-100"></div>
+        <div class="col-12 col-sm-6 col-md-8 min-vh-100 p-0">
+          <div class="buy__ticket-header">
+            <button class="return__home-btn">Anasayfaya Dön <i class="fa fa-solid fa-close"></i></button>
+          </div>
+          <div class="select__ticket"></div>
+          <div class="select__chair"></div>
+          <div class="select__payment"></div>
+        </div>
       </div>
     </main>
-    <footer class="footer bg-light pb-5">
-      <div class="social-links">
-        <span>Bizi Takip Et</span>
-        <div class="mt-3">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-youtube"></i></a>
-          <a href="#"><i class="fa-brands fa-foursquare"></i></a>
-        </div>
-      </div>
-
-      <div class="row mt-5 mx-0">
-        <div class="col-3">
-          <ul class="useful-links">
-            <li><a href="#" class="useful-link-a">Vizyonda</a></li>
-            <li><a href="#" class="useful-link-a">Yakında</a></li>
-            <li><a href="#" class="useful-link-a">Sinemalar</a></li>
-            <li><a href="#" class="useful-link-a">CGV Arthouse</a></li>
-            <li><a href="#" class="useful-link-a">CGV Cinema Club</a></li>
-            <li><a href="#" class="useful-link-a">Ayrıcalıklı Salonlar</a></li>
-            <li><a href="#" class="useful-link-a">Kampanyalar</a></li>
-            <li>
-              <a href="#" class="useful-link-a">Özel Etkinlik Talepleri</a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-2">
-          <ul class="useful-links">
-            <li><a href="#" class="useful-link-a">E-Bilet</a></li>
-            <li><a href="#" class="useful-link-a">İade İşlemleri</a></li>
-            <li>
-              <a href="#" class="useful-link-a">MoviePass İade İşlemleri</a>
-            </li>
-            <li><a href="#" class="useful-link-a">İnsan Kaynakları</a></li>
-            <li><a href="#" class="useful-link-a">Sıkça Sorulan Sorular</a></li>
-            <li><a href="#" class="useful-link-a">İşlem Rehberi</a></li>
-            <li><a href="#" class="useful-link-a">Hakkımızda</a></li>
-            <li><a href="#" class="useful-link-a">Yorum ve Öneriler</a></li>
-          </ul>
-        </div>
-        <div class="col-3">
-          <ul class="useful-links">
-            <li>
-              <a href="#" class="useful-link-a">KVK Aydınlatma Bildirimi</a>
-            </li>
-            <li>
-              <a href="#" class="useful-link-a">Kamera Sistemleri Bildirimi</a>
-            </li>
-            <li>
-              <a href="#" class="useful-link-a" target="_blank"
-                >KVKK Basvuru Formu</a
-              >
-            </li>
-            <li>
-              <a href="#" class="useful-link-a">KVK Politikasi</a>
-            </li>
-            <li><a href="#" class="useful-link-a">İletişim</a></li>
-          </ul>
-        </div>
-        <div class="col-4 text-end">
-          <a href="#" class="useful-link-a">Gizlilik</a>
-          <a href="#" class="useful-link-a">Kullanım Koşulları</a>
-          <br />
-          <a href="#" class="useful-link-a">Mesafeli Bilet Satış Sözleşmesi</a>
-          <div class="copyright">
-            Reklam vermek için:
-            <a
-              href="http://www.marsmedia.com.tr"
-              class="useful-link-a"
-              target="_blank"
-              >www.marsmedia.com.tr</a
-            ><br />
-            © Copyright <span id="copyright-date"></span>
-          </div>
-        </div>
-      </div>
-    </footer>
     <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
